2008-06-30  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Oliver.

        Tests for:

        Bug 19830: REGRESSION (r34883): Google Reader doesn't show up feed list on sidebar
        <https://bugs.webkit.org/show_bug.cgi?id=19830>

        * fast/js/codegen-peephole-locals-expected.txt: Added.
        * fast/js/codegen-peephole-locals.html: Added.
        * fast/js/resources/codegen-peephole-locals.js: Added.

2008-06-30  Adele Peterson  <adele@apple.com>

        Reviewed by Anders.

        Test for <rdar://problem/5301322> REGRESSION: Select All selects the whole page when used in readonly textareas

        * editing/selection/select-all-textarea-expected.txt: Added.
        * editing/selection/select-all-textarea.html: Added.

2008-06-30  chris fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin
   
        Added tests for internal link anchors and for radio button group members
        Updated the accessibilty dump to output a standard NSLog null when the
        object is null

        * accessibility/document-attributes-expected.txt:
        * accessibility/internal-link-anchors-expected.txt: Added.
        * accessibility/internal-link-anchors.html: Added.
        * accessibility/radio-button-group-members-expected.txt: Added.
        * accessibility/radio-button-group-members.html: Added.

2008-06-30  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Antti.

        Fix all existing tests in svg/dynamic-updates to actually reflect repainting changes, by
        removing the timing dependency. Instead model them like frame-getSVGDocument.html by
        not including the <script src="js-test-post.js"> element within the TEMPLATE.html but
        by dynamically injecting it, if the test actually finished.

        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-dom-cx-attr-expected.checksum:
        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-dom-cy-attr-expected.checksum: